--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
 <body>
     <!-- Document Structure -->
     <header>
-        <h1>Header</h1>
+        <h1>Header 1</h1>
     </header>
     <nav>
         <ul>
@@ -23,20 +22,27 @@
         <p>Section content</p>
     </section>
     <article>
-        <h2>Article Title</h2>
+        <h3>Article Title</h3>
         <p>Article content</p>
     </article>
     <footer>
-        <p>Footer content</p>
+        <h4>Footer Content</h4>
     </footer>
 
     <!-- Text Formatting -->
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
     <p><b>This is bold text</b> and <i>this is italic text</i>.</p>
     <p><u>This is underlined text</u>.</p>
     <p><strong>This is strong text</strong> and <em>this is emphasized text</em>.</p>
     <p>This is <sub>subscript</sub> and this is <sup>superscript</sup> text.</p>
 
     <!-- Lists -->
+    <h6>Lists</h6>
     <ul>
         <li>Unordered List Item 1</li>
         <li>Unordered List Item 2</li>
@@ -48,9 +54,7 @@
 
     <!-- Links -->
     <a href="https://www.example.com">Visit Example</a>
-
-    <!-- Images -->
-    <img src="image.jpg" alt="Description of image">
+    <a href="media.html">Media HTML</a>
 
     <!-- Tables -->
     <table>
@@ -65,15 +69,21 @@
     </table>
 
     <!-- Forms -->
-    <form action="/submit" method="post">
+    <form action="/submit" method="post" onsubmit="alert('Successfully Submitted')">
         <input type="text" name="username" placeholder="Enter your username">
         <input type="password" name="password" placeholder="Enter your password">
+        <select name="gender">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="other">Other</option>
+        </select>
+        <textarea name="message" placeholder="Enter your message"></textarea>
         <button type="submit">Submit</button>
     </form>
 
     <!-- Semantic Elements -->
     <header>
-        <h1>Header</h1>
+        <h1>Semantic Elements</h1>
     </header>
     <footer>
         <p>Footer content</p>
@@ -89,17 +99,18 @@
         <p>Article content</p>
     </article>
     <section>
-        <h2>Section Title</h2>
+        <h3>Section Title</h3>
         <p>Section content</p>
     </section>
 
     <!-- Interactive Elements -->
+    <h4>Interactive Elements</h4>
     <button onclick="alert('Button clicked')">Click Me</button>
     <input type="checkbox" id="checkbox">
     <label for="checkbox">Checkbox</label>
     <input type="radio" id="radio" name="radio">
     <label for="radio">Radio</label>
-    <form action="/submit" method="post">
+    <form action="/submit" method="post" onsubmit="alert('Successfully Submitted')">
         <input type="text" name="username" placeholder="Enter your username">
         <input type="submit" value="Submit">
     </form>
@@ -109,6 +120,7 @@
     </select>
 
     <!-- Meta Information -->
+    <h5>Meta Information</h5>
     <meta charset="UTF-8">
     <meta name="description" content="Description of the webpage">
     <meta name="keywords" content="HTML, CSS, JavaScript">
